avoid h scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,8 @@ html, body {
 }
 
 .column-1 {
-  flex: 0 0 80%;
+  flex: 3 3 50%;
+  min-width: 400px;
 }
 
 .column-1 h1{
@@ -80,7 +81,7 @@ html, body {
 }
 
 .column-2 {
-  flex: 0 0 20%;
+  flex: 1 1 20%;
 }
 
 .column-3 {
